tdf#113451 Fix misplacing of lines by adding mappingChanged

Change-Id: I9b381f456d4c96369fdf7e94f161fde2723ebead
Reviewed-on: https://gerrit.libreoffice.org/44842
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Bartosz Kosiorek <gang65@poczta.onet.pl>